# DepthStream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DepthStreamConfig.cmake.in
doc/: TRANSMITTER-RECEIVER-CONNECT.mmd
example-dump/: CMakeLists.txt
example-dump-osc/: CMakeLists.txt
example-dump-osc/src/: main.cpp
example-dump/src/: main.cpp
example-playback/: CMakeLists.txt
example-playback-osc/: CMakeLists.txt
example-playback-osc/src/: main.cpp
example-playback-socket/: CMakeLists.txt
example-playback-socket/src/: key_handler.h  main.cpp
example-playback-syphon/: CMakeLists.txt
example-playback-syphon/src/: main.cpp
example-playback/src/: main.cpp
example-realsensetransmitter/: CMakeLists.txt
example-realsensetransmitter/src/: RealSenseTransmitter.cpp  main.cpp
example-record/: CMakeLists.txt
example-record/src/: main.cpp
example-unityreceiver/: .gitignore
example-unityreceiver/Assets/DepthStream/SampleScenes/: DepthStreamReceiver.unity  GravityDemo 1.unity
example-unityreceiver/Assets/DepthStream/Scripts/: Frame.cs  Populator.cs  Receiver.cs  SocketReceiver.cs  UDPReceiver.cs
example-unityreceiver/Assets/DepthStream/lib/C-Sharp-Promise/: RSG.asmdef
example-unityreceiver/Assets/DepthStream/lib/C-Sharp-Promise/.bit.bak/: FETCH_HEAD  config  index  packed-refs
example-unityreceiver/Assets/DepthStream/lib/C-Sharp-Promise/.bit.bak/objects/pack/: pack-ce84394c94ebda7d4cb84d6045bc827e60be4964.idx  pack-ce84394c94ebda7d4cb84d6045bc827e60be4964.pack
example-unityreceiver/Assets/DepthStream/lib/C-Sharp-Promise/.bit.bak/refs/heads/: master
example-unityreceiver/Assets/DepthStream/lib/C-Sharp-Promise/src/: Wait.cs
example-unityreceiver/Assets/DepthStream/lib/fusetools/: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  doxygen.config
example-unityreceiver/Assets/DepthStream/lib/fusetools/.git.bak/: config  index  packed-refs
example-unityreceiver/Assets/DepthStream/lib/fusetools/.git.bak/objects/pack/: pack-2a295d6c7d63628d3c534ab2e3ded33e98fc2a26.idx  pack-2a295d6c7d63628d3c534ab2e3ded33e98fc2a26.pack
example-unityreceiver/Assets/DepthStream/lib/fusetools/Demos/CamFrameRecorderDemo/: CamFrameRecorderDemo.unity  CamFrameRecorderDemoTex.renderTexture
example-unityreceiver/Assets/DepthStream/lib/fusetools/Prefabs/: Recorder.prefab
example-unityreceiver/Assets/DepthStream/lib/fusetools/Scripts/: Aligner.cs  ApplicationQuit.cs  ArgumentEvents.cs  AsyncQueue.cs  AsyncQueueItem.cs  AutoTransform.cs  CamFrameRecorder.cs  ColliderEvents.cs  DebugLogger.cs  DelayEvent.cs  Delta.cs  Destroy.cs  DestroyEvent.cs  DestroySelf.cs  DirectorEvents.cs  DirectorPool.cs  Distance.cs  Doc.cs  DragHandler.cs  EaseTo.cs  EditorPlatform.cs  FpsMouseLook.cs  FuseTools.asmdef  GenericAction.cs  Impulse.cs  InfoEditor.cs  KeyAction.cs  KeyInterface.cs  LifecycleEvents.cs  LookAt.cs  MouseLook.cs  NormPos.cs  ObjectSwitcher.cs  Platform.cs  PlaybackTimer.cs  PointerEnter.cs  RandomFloat.cs  ReplaceWith.cs  Screenshot.cs  SimpleSpawn.cs  (+9 more)
example-unityreceiver/Assets/DepthStream/lib/fusetools/Scripts/Converters/: AnimationCurve.cs  FloatToFloat.cs  FloatToString.cs  FloatToVector3.cs  IntToString.cs  QuaternionConverter.cs  String.cs  Strings.cs  Vector2Int.cs  Vector3ToFloat.cs
example-unityreceiver/Assets/DepthStream/lib/fusetools/Scripts/Ext/: ApplicationExt.cs  AudioSourceExt.cs  CameraExt.cs  ColliderExt.cs  DirectorExt.cs  InputFieldExt.cs  LineRendererExt.cs  MaterialParamExt.cs  MouseExt.cs  RectTransformExt.cs  SceneExt.cs  ScreenExt.cs  ScrollRectExt.cs  SineExt.cs  TimeExt.cs  TransformExt.cs  UiDropdownExt.cs  UiImageExt.cs  UiRawImageExt.cs  UiSliderExt.cs  UiTextExt.cs  VideoPlayerExt.cs
example-unityreceiver/Assets/DepthStream/lib/fusetools/Scripts/Vars/: ColorVar.cs  FloatVar.cs  IntVar.cs  Vector3Var.cs
example-unityreceiver/Assets/DepthStream/lib/fusetools/TestScripts/: EventCounter.cs  EventWait.cs  FuseToolsTestScripts.asmdef  Screenshotter.cs  Utils.cs
example-unityreceiver/Assets/DepthStream/lib/fusetools/Tests/: AsyncQueueTests.cs  CamFrameRecorderTests.cs  DestroySelfTests.cs  FuseToolsTests.asmdef  PlaybackTimerTests.cs  SimpleSpawnTests.cs  ThreadIntervalTests.cs
example-unityreceiver/Assets/DepthStream/lib/fusetools/Tests-EditMode/: ArgumentEventTests.cs  DistanceTests.cs  FuseToolsEditModeTests.asmdef  GenericActionTests.cs  PlatformTests.cs
example-unityreceiver/ProjectSettings/: ProjectSettings.asset
include/DepthStream/: Buffer.h  CamInterface.h  Compressor.h  DepthStream.h  Frame.h  Inflater.h  Playback.h  Transmitter.h  TransmitterAgent.h  compression.h  constants.h  discover.h  functional.h
lib/discover/: CMakeLists.txt
lib/discover/cmake/: DiscoverConfig.cmake.in
lib/discover/include/discover/: all.h  middleware.h  socket.h
lib/discover/include/discover/osc/: PacketConsumer.h  PacketSender.h  PacketService.h  ServiceConnectionListener.h  all.h  osc.h  service.h
lib/discover/include/discover/socket/: PacketService.h
lib/discover/src/: middleware.cpp
lib/discover/src/osc/: PacketConsumer.cpp  PacketSender.cpp  PacketService.cpp  ServiceConnectionListener.cpp  broadcast.cpp  connect.cpp  osc.cpp  packet.cpp  server.cpp  urlinfo.cpp
lib/discover/src/socket/: PacketService.cpp  socket.cpp
python/: requirements.txt
python/data/: process_player.json  processor_mask.json
python/depth/: constants.py  frame_sizes.py  mask.py  player.py  processor.py  receiver.py  steps.py
python/depth/discover/: compress.py  socket.py
python/depth/discover/packet/: Player.py
python/discover/: socket.py
python/discover/packet/: Buffer.py  Player.py  Throttle.py
python/middleware/: Step.py
src/: CamInterface.cpp  Compressor.cpp  Frame.cpp  Inflater.cpp  OniSampleUtilities.cpp  Playback.cpp  Receiver.cpp  Recorder.cpp  Transmitter.cpp  TransmitterAgent.cpp  Windowsstuff.cpp  compression.cpp  discover.cpp  functional.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test_buffer.cpp  test_compression.cpp  test_compressor.cpp  test_frame.cpp  test_inflater.cpp  test_transmitter.cpp
(+1 files in other folders)
